maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:17: error: identifier expected but '=' found.
def keeHandOnSideWall(Int : sommeAngle) : Int sommeAngle = {
                                                         ^